✨ Added remaining javac switches to JavaCompiler